--- a/xpi/content/css/linux/overlayprefs_extra.css
+++ b/xpi/content/css/linux/overlayprefs_extra.css
@@ -6,6 +6,7 @@
   visibility: collapse !important;
 }
 
+#ctraddon_appbutton_list2desc,
 #ctraddon_appbutton_list2{
   visibility: visible !important;
 }
@@ -13,6 +14,7 @@
 #ctraddon_pw_menubarnofog,
 #ctraddon_pw_altmenubar,
 #ctraddon_tabs_in_titlebar,
+#ctraddon_appbutton_list1desc,
 #ctraddon_appbutton_list1{
   visibility: collapse !important;
   display:none !important;
