--- a/xpi/content/css/winxp/overlayprefs_extra.css
+++ b/xpi/content/css/winxp/overlayprefs_extra.css
@@ -7,12 +7,14 @@
 }
 
 #ctraddon_pw_noresizerxp,
+#ctraddon_appbutton_list1desc,
 #ctraddon_appbutton_list1{
   visibility: visible !important;
 }
 #ctraddon_pw_menubargroup2,
 #ctraddon_pw_menubarnofog,
 #ctraddon_pw_altmenubar,
+#ctraddon_appbutton_list2desc,
 #ctraddon_appbutton_list2{
   visibility: collapse !important;
   display:none !important;
