--- a/xpi/content/css/mac/overlayprefs_extra.css
+++ b/xpi/content/css/mac/overlayprefs_extra.css
@@ -6,6 +6,7 @@
   visibility: collapse !important;
 }
 
+#ctraddon_appbutton_list2desc,
 #ctraddon_appbutton_list2{
   visibility: visible !important;
 }
@@ -22,6 +23,7 @@
 #ctraddon_pw_menubarnofog,
 #ctraddon_pw_altmenubar,
 #ctraddon_wincontrols,
+#ctraddon_appbutton_list1desc,
 #ctraddon_appbutton_list1{
   visibility: collapse !important;
   display: none !important;
