--- a/xpi/content/css/winaero/classictabsextra.css
+++ b/xpi/content/css/winaero/classictabsextra.css
@@ -110,29 +110,29 @@
 		}
 
 		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec);
+		  background-image: linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec);
 		}
 
 		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa);
+		  background-image: linear-gradient(to top,#d0dce8,#dce7f3,#e5effa);
 		}
 		
 		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style][selected="true"]:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top,#eaf2fb,#eef5fc,#fbfdff) !important;
 		}
 		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec) !important;
+		  background-image: linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec) !important;
 		}
 		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa) !important;
+		  background-image: linear-gradient(to top,#d0dce8,#dce7f3,#e5effa) !important;
 		}
 
 		.tabs-newtab-button:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec) !important;
+		  background-image: linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec) !important;
 		}
 
 		.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa) !important;
+		  background-image: linear-gradient(to top,#d0dce8,#dce7f3,#e5effa) !important;
 		}
 
 		.tabbrowser-tab[selected=true][pinned]:not(:-moz-lwtheme) > .tab-stack > .tab-content {
@@ -150,13 +150,15 @@
 		}
 
 		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog);
+		  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog);*/
+		  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog);
 		}
 
 		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog);
+		  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog);*/
+		  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog);
 		}
 		
 		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style][selected="true"]:not(:-moz-lwtheme) {
@@ -165,23 +167,27 @@
 		}
 
 		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
+		  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog) !important;*/
+		  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog);
 		}
 
 		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
+		  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog) !important;*/
+		  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog);
 		}
 
 		.tabs-newtab-button:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
+		  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog);*/
+		  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog) !important;
 		}
 
 		.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
+		  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog);*/
+		  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog) !important;
 		}
 
 		.tabs-newtab-button:not(:-moz-lwtheme):not(#privateTab-afterTabs-openNewPrivateTab),
