--- a/xpi/content/css/winaero/overlayprefs_extra.css
+++ b/xpi/content/css/winaero/overlayprefs_extra.css
@@ -6,10 +6,12 @@
   visibility: collapse !important;
 }
 
+#ctraddon_appbutton_list1desc,
 #ctraddon_appbutton_list1{
   visibility: visible !important;
 }
 
+#ctraddon_appbutton_list2desc,
 #ctraddon_appbutton_list2{
   visibility: collapse !important;
   display:none !important;
