--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -602,6 +602,7 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_pw_bmbutpanelm label,
 #ctraddon_pw_bmbunsortbm label,
 #ctraddon_pw_bmbunsortbm2 label,
+#ctraddon_pw_bmbutclpopup label,
 #ctraddon_pw_bmbutnotext label,
 #ctraddon_pw_bmbviewbmsb label ,
 #ctraddon_pw_bmbviewbmtb label,
