--- a/xpi/content/css/tabtitle_nooverflow2.css
+++ b/xpi/content/css/tabtitle_nooverflow2.css
@@ -5,5 +5,11 @@
 	#main-window[fx53plus="true"] .tab-label-container[textoverflow]:not([pinned]) {
 	  mask-image: unset !important;
 	}
+	#main-window[fx53plus="true"] .tab-label-container[textoverflow]:not([pinned])::after{
+	 content: "" !important;
+	}
+	#main-window[fx53plus="true"] .tab-label-container[textoverflow]:not([pinned]) .tab-text {
+	  white-space: unset !important;
+	}
 
 }
