--- a/xpi/content/css/alt_newtabpage.css
+++ b/xpi/content/css/alt_newtabpage.css
@@ -115,6 +115,10 @@
 	  height: 18px !important;
 	  width: 18px !important;
    }
+   
+	#newtab-customize-panel {
+	  transition-duration: unset !important;
+	}
 
 }
 
