--- a/xpi/content/css/winaero/tabsontop_offextra.css
+++ b/xpi/content/css/winaero/tabsontop_offextra.css
@@ -69,7 +69,7 @@
 		#main-window[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme) {
 		  background: #dbeaf9 !important;
 		}
-	    #main-window[defaultfxtheme="true"][tabsontop="false"] #TabsToolbar:not(:-moz-lwtheme) {
+	    #main-window[defaultfxtheme="true"][tabsontop="false"]:not([developertheme="true"]) #TabsToolbar:not(:-moz-lwtheme) {
 		  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important; /*#aabccf*/
 	    }
 	}
@@ -88,7 +88,7 @@
 		  border-bottom: 1px solid hsla(209,67%,12%,0.0) !important;
 		  background-clip: padding-box !important;
 	    }
-	    #main-window[defaultfxtheme="true"][tabsontop="false"][sizemode="maximized"]  #TabsToolbar:not(:-moz-lwtheme) {
+	    #main-window[defaultfxtheme="true"][tabsontop="false"][sizemode="maximized"]:not([developertheme="true"])  #TabsToolbar:not(:-moz-lwtheme) {
 		  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important; /*#aabccf*/
 	    }
 	}
