--- a/xpi/content/css/winxp/tabsontop_offextra.css
+++ b/xpi/content/css/winxp/tabsontop_offextra.css
@@ -38,7 +38,7 @@
 	  background: -moz-Dialog !important;
 	}
 	
-	#main-window[defaultfxtheme="true"][tabsontop="false"] #TabsToolbar:not(:-moz-lwtheme) {
+	#main-window[defaultfxtheme="true"][tabsontop="false"]:not([developertheme="true"]) #TabsToolbar:not(:-moz-lwtheme) {
 	  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important;
 	}
 	
