--- a/xpi/content/css/linux/overlayprefs_extra.css
+++ b/xpi/content/css/linux/overlayprefs_extra.css
@@ -24,7 +24,9 @@
 }
 
 #ctraddon_pw_cappbutc1,
-#ctraddon_pw_cappbutc2 {
+#ctraddon_pw_cappbutc2,
+#ctraddon_pw_cappbutpc1,
+#ctraddon_pw_cappbutpc2 {
   width:170px !important;
 }
 
