--- a/xpi/content/css/hide_ibinfoico2.css
+++ b/xpi/content/css/hide_ibinfoico2.css
@@ -1,50 +1,19 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 @-moz-document url(chrome://browser/content/browser.xul) {
 	
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .verifiedDomain #identity-icon,
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .verifiedIdentity #identity-icon,
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .insecureLoginForms #identity-icon,
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveContent #identity-icon,
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .weakCipher #identity-icon,
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContent #identity-icon,
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #identity-icon,
-	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveBlocked #identity-icon {
-	  visibility: hidden;
+	#main-window[fx50plus="true"] #urlbar[pageproxystate="valid"] :-moz-any(.verifiedDomain,.verifiedIdentity,.insecureLoginForms,.mixedActiveContent,.weakCipher,.mixedDisplayContent,.mixedDisplayContentLoadedActiveBlocked,.mixedActiveBlocked) #identity-icon {
+	  /*visibility: hidden;*/
+	  opacity: 0 !important;
       -moz-margin-end: -18px !important;
 	}
-  
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .verifiedDomain #identity-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .verifiedIdentity #identity-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .insecureLoginForms #identity-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedActiveContent #identity-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .weakCipher #identity-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedDisplayContent #identity-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #identity-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedActiveBlocked #identity-icon {
+
+	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] :-moz-any(.verifiedDomain,.verifiedIdentity,.insecureLoginForms,.mixedActiveContent,.weakCipher,.mixedDisplayContent,.mixedDisplayContentLoadedActiveBlocked,.mixedActiveBlocked) #identity-icon {
 	  visibility: hidden;
       -moz-margin-end: -2px !important;
 	}
 
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .verifiedDomain #tracking-protection-icon[state="blocked-tracking-content"],
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .verifiedIdentity #tracking-protection-icon[state="blocked-tracking-content"],
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .insecureLoginForms #tracking-protection-icon[state="blocked-tracking-content"],
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedActiveContent #tracking-protection-icon[state="blocked-tracking-content"],
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .weakCipher #tracking-protection-icon[state="blocked-tracking-content"],
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedDisplayContent #tracking-protection-icon[state="blocked-tracking-content"],
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #tracking-protection-icon[state="blocked-tracking-content"],
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedActiveBlocked #tracking-protection-icon[state="blocked-tracking-content"] {
-	  -moz-margin-start: -14px !important;
-      -moz-margin-end: 1px !important;
-	}
- 
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .verifiedDomain #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .verifiedIdentity #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .insecureLoginForms #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedActiveContent #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .weakCipher #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedDisplayContent #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon,
-	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] .mixedActiveBlocked #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon {
+	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] :-moz-any(.verifiedDomain,.verifiedIdentity,.insecureLoginForms,.mixedActiveContent,.weakCipher,.mixedDisplayContent,.mixedDisplayContentLoadedActiveBlocked,.mixedActiveBlocked) #tracking-protection-icon[state="blocked-tracking-content"],
+	#main-window:not([fx50plus="true"]) #urlbar[pageproxystate="valid"] :-moz-any(.verifiedDomain,.verifiedIdentity,.insecureLoginForms,.mixedActiveContent,.weakCipher,.mixedDisplayContent,.mixedDisplayContentLoadedActiveBlocked,.mixedActiveBlocked) #tracking-protection-icon:not([state="blocked-tracking-content"]) + #connection-icon {
 	  -moz-margin-start: -14px !important;
       -moz-margin-end: 1px !important;
 	}
