--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -590,6 +590,38 @@
 	  display: none;
 	}
 	
+	/* private mask item */
+	#ctraddon_pmask-item {
+	  background:url("chrome://classic_theme_restorer/content/images/private_browsing-mask.png") center no-repeat;
+	}
+
+	toolbar #ctraddon_pmask-item{
+	  width: 26px;
+	  min-height: 16px;
+	  margin: 0 3px;
+	}
+	#ctraddon_pmask-item[cui-areatype="menu-panel"],
+	toolbarpaletteitem[place="palette"] > #ctraddon_pmask-item{
+	  background:url("chrome://classic_theme_restorer/content/images/private_browsing-mask.png") center no-repeat;
+	  border:none;
+	  min-width:100px;
+	  width:100px;
+	  max-width:100px;
+	  min-height:0px;
+	  height:50px;
+	}
+	#ctraddon_pmask-item[cui-areatype="menu-panel"]{
+	  margin-top:-30px !important;
+	}
+	
+	#main-window:not([privatebrowsingmode=temporary]):not([customizing]) #ctraddon_pmask-item{
+	  visibility: collapse;
+	}
+	
+	toolbar:-moz-lwtheme-brighttext #ctraddon_pmask-item{
+	  filter: brightness(1.5);
+	}
+	
 	/* Firefox 44 large mode fix */
 	#nav-bar[iconsize="large"] .toolbarbutton-1:not(:-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button)) > .toolbarbutton-icon,
 	#nav-bar[iconsize="large"] .toolbarbutton-1:not(:-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button)) > .toolbarbutton-menubutton-button > .toolbarbutton-icon,
