--- a/xpi/content/css/tabs_curvedall.css
+++ b/xpi/content/css/tabs_curvedall.css
@@ -65,9 +65,9 @@
 	  opacity: 0 !important;
 	}
 
-	#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after:not(:-moz-lwtheme),
-	.tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before:not(:-moz-lwtheme),
-	#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after:not(:-moz-lwtheme) {
+	#tabbrowser-tabs[movingtab]:not(:-moz-lwtheme) > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+	.tabbrowser-tab:not(:-moz-lwtheme):not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+	#tabbrowser-tabs:not(:-moz-lwtheme):not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
 	  background-image: none !important;
 	  background-color: unset !important;
 	}
@@ -100,7 +100,7 @@
       -moz-margin-end: -16px !important;
     }
 
-    .tabbrowser-tab:not(:-moz-lwtheme) .tab-text {
+    #main-window:not([fx53plus="true"]) .tabbrowser-tab:not(:-moz-lwtheme) .tab-text {
       -moz-margin-start: -4px !important;
 	  -moz-margin-end: -6px !important;
     }
@@ -137,8 +137,8 @@
       border-style:solid;
     }
     
-    #tabbrowser-tabs::before:not(:-moz-lwtheme),
-	#tabbrowser-tabs::after:not(:-moz-lwtheme) {
+    #tabbrowser-tabs:not(:-moz-lwtheme)::before,
+	#tabbrowser-tabs:not(:-moz-lwtheme)::after {
       content: '';
       display: block;
       background-image:
