--- a/xpi/content/css/cuibuttons.css
+++ b/xpi/content/css/cuibuttons.css
@@ -17,6 +17,12 @@
 		background-color: -moz-Dialog;
 	  }
 	}
+	
+	@media (-moz-windows-classic){
+	  #main-window[defaultfxtheme="true"] #ctraddon_cuibuttonsbox{
+		background-color: -moz-Dialog;
+	  }
+	}
 
 	/* customize area buttons */
 	#main-window[defaultfxtheme="true"] #ctraddon_cui-smallnavbut-button1,
