--- a/xpi/content/css/winxp/classictabsextra.css
+++ b/xpi/content/css/winxp/classictabsextra.css
@@ -110,31 +110,23 @@
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog);*/
 	  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog);
 	}
 	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog);*/
 	  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog);
 	}
 	
-	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style][selected="true"]:not(:-moz-lwtheme) {
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color][selected="true"]:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
 						linear-gradient(-moz-dialog, -moz-dialog) !important;
 	}
-	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style][selected="true"]:-moz-lwtheme{
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color][selected="true"]:-moz-lwtheme{
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%) !important;
 	}
-	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog) !important;*/
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog);
 	}
-	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][style]:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog) !important;*/
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):hover:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog);
 	}
 	
@@ -144,14 +136,10 @@
 	}
 	
 	.tabs-newtab-button:not(:-moz-lwtheme) {
-	  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog);*/
 	  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog) !important;
 	}
 
 	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-	  /*background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog);*/
 	  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog) !important;
 	}
 
