--- a/xpi/content/css/win8/classictabsextra.css
+++ b/xpi/content/css/win8/classictabsextra.css
@@ -111,10 +111,10 @@
 						linear-gradient(-moz-dialog, -moz-dialog) !important;
 	}
 	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog);
+	  background-image: linear-gradient(to bottom, rgba(114,114,114,.1) 1px, rgba(81,81,81,.2) 80%, rgba(0,0,0,.2)), linear-gradient(to top, rgba(10%,10%,10%,.2) 0px,-moz-dialog 1px, -moz-dialog) !important;
 	}
 	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog);
+	  background-image: linear-gradient(to bottom, rgba(255,255,255,.3) 1px, rgba(191,191,191,.2) 80%, rgba(153,153,153,.2)), linear-gradient(to top, rgba(10%,10%,10%,.4) 0px,-moz-dialog 1px, -moz-dialog) !important;
 	}
 	
 	.tabs-newtab-button:not(:-moz-lwtheme) {
