--- a/xpi/content/css/alt_optionspage.css
+++ b/xpi/content/css/alt_optionspage.css
@@ -14,6 +14,10 @@
 	    }
 	  }
 	}
+	
+	#searchInput {
+      margin-right: 30px !important;
+	}
 
 	#categories {
 	  background: transparent !important;
@@ -43,6 +47,7 @@
 	}
 	
 	/* category icons */
+	#category-search-results .category-icon,
 	#category-search .category-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/altprefs_options_search.png") !important;
 	  -moz-image-region: rect(0, 32px, 32px, 0) !important;
@@ -51,6 +56,7 @@
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/altprefs_options.png") !important;
 	  -moz-image-region: rect(0, 32px, 32px, 0) !important;
 	}
+	#category-containers .category-icon,
 	#category-content .category-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/altprefs_options.png") !important; 
 	  -moz-image-region: rect(0, 96px, 32px, 64px) !important;
