--- a/xpi/content/css/alt_optionswindow2.css
+++ b/xpi/content/css/alt_optionswindow2.css
@@ -26,7 +26,12 @@
 	
 	#dialogBox {
 	  min-width: unset !important;
-	  /*min-height: unset !important;*/
+	}
+	
+	#searchInput {
+      margin-top: -30px !important;
+      margin-right: 30px !important;
+      margin-bottom: 30px !important;
 	}
 
 	/* main colors category items */
@@ -60,6 +65,7 @@
 	}
 	
 	/* category icons */
+	#category-search-results .category-icon,
 	#category-search .category-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/altprefs_options_search.png") !important;
 	  -moz-image-region: rect(0, 32px, 32px, 0) !important;
@@ -68,6 +74,7 @@
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/altprefs_options.png") !important;
 	  -moz-image-region: rect(0, 32px, 32px, 0) !important;
 	}
+	#category-containers .category-icon,
 	#category-content .category-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/altprefs_options.png") !important; 
 	  -moz-image-region: rect(0, 96px, 32px, 64px) !important;
@@ -359,7 +366,7 @@
 	}
 	
 	#mainPrefPane + hbox,
-	#category-search[hidden="true"],
+	.category[hidden="true"],
 	#mainPrefPane .header {
 	  display: none !important;
 	}
