--- a/xpi/content/css/alt_optionswindow_ct.css
+++ b/xpi/content/css/alt_optionswindow_ct.css
@@ -27,11 +27,17 @@
 	  background: inherit !important;
 	}
 	
-	#category-search[hidden="true"],
+	#searchInput {
+      margin-top: -30px !important;
+      margin-right: 30px !important;
+      margin-bottom: 30px !important;
+	}
+	
+	.category[hidden="true"],
 	#mainPrefPane .header {
 	  display: none !important;
 	}
-
+	
 	vbox.main-content {
 	  margin-top: 60px !important;
 	  min-width: unset !important;
