--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -178,12 +178,16 @@ radio.ctraddontab .radio-check-box1 {
   border:0;
 }
 
+#ctraddon_pw_impexpinfo,
 #ctraddon_pw_radiorestart{
   font-weight:bold;
   color:red;
   border:1px solid red;
-  text-align:center;
   background: yellow;
+}
+
+#ctraddon_pw_radiorestart{
+  text-align:center;
 }
 
 .acprefdesc {
@@ -593,6 +597,7 @@ radio.ctraddontab .radio-check-box1 {
   min-height:16px !important;
 }
 
+#ctraddon_pw_searchbar label,
 #ctraddon_pw_ctroldsearch label {
   background: -moz-image-rect(url(chrome://classic_theme_restorer/content/images/search-glass.png), 0, 16, 16, 0) no-repeat left !important;
   padding-left:20px !important;
