--- a/xpi/content/css/smallnavbut.css
+++ b/xpi/content/css/smallnavbut.css
@@ -6,5 +6,22 @@
 	margin-top:1px !important;
 	margin-bottom:1px !important;
   }
+  
+  /* cui buttons */
+  #ctraddon_cui-smallnavbut-button1 {
+	background:#fbfbfb !important;
+  }
+  #ctraddon_cui-smallnavbut-button2 {
+	background:#dadada !important;
+  }
+  
+  @media all and (-moz-windows-classic) {
+	  #ctraddon_cui-smallnavbut-button1 * {
+		background: unset !important;
+	  }
+	  #ctraddon_cui-smallnavbut-button2 * {
+		background:#e7e3db !important;
+	  }
+  }
 
 }
