--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -415,6 +415,19 @@
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/bookmarks_sidebar_2.png);
 	}
 	
+	#ctraddon_preferences-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	toolbarpaletteitem[place="palette"] > #ctraddon_preferences-button > .toolbarbutton-icon{
+	  -moz-image-region: rect(0px, 768px, 32px, 736px);
+	  list-style-image: url(chrome://browser/skin/menuPanel.png);
+	}
+	
+	#main-window[fx51plus="true"] #ctraddon_preferences-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	#main-window[fx51plus="true"] toolbarpaletteitem[place="palette"] > #ctraddon_preferences-button > .toolbarbutton-icon{
+	  -moz-image-region: rect(0px, 768px, 32px, 736px);
+	  list-style-image: url(chrome://browser/skin/menuPanel.svg);
+	}
+	
+	
 	#ctraddon_bookmarks-menu-toolbar-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 	toolbarpaletteitem[place="palette"] > #ctraddon_bookmarks-menu-toolbar-button > .toolbarbutton-icon{
 	  -moz-image-region: rect(0px, 32px, 32px, 0);
@@ -628,113 +641,7 @@
 	#nav-bar[iconsize="large"] .toolbarbutton-1:not(:-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button)) > .toolbarbutton-badge-stack > .toolbarbutton-icon{
 	  max-width: unset !important;
 	}
-	
-	/* support for old text mode */
-	toolbar[mode="text"] #back-button label,
-	toolbar[mode="text"] #forward-button label,
-	toolbar[mode="text"] #urlbar #urlbar-reload-button .toolbarbutton-text,
-	toolbar[mode="text"] #urlbar #urlbar-stop-button .toolbarbutton-text,
-	toolbar[mode="text"] #urlbar #urlbar-go-button .toolbarbutton-text,
-	toolbar[mode="text"] .tabs-newtab-button .toolbarbutton-text,
-	toolbar[mode="text"] #urlbar #feed-button .toolbarbutton-text {
-	  display: none !important;
-	}
-	
-	toolbar[mode="text"] #back-button image,
-	toolbar[mode="text"] #forward-button image,
-	toolbar[mode="text"] #urlbar #urlbar-reload-button .toolbarbutton-icon,
-	toolbar[mode="text"] #urlbar #urlbar-stop-button .toolbarbutton-icon,
-	toolbar[mode="text"] #urlbar #urlbar-go-button .toolbarbutton-icon,
-	toolbar[mode="text"] .tabs-newtab-button .toolbarbutton-icon,
-	toolbar[mode="text"] .tabbrowser-tab .tab-close-button .toolbarbutton-icon,
-	toolbar[mode="text"] #urlbar #feed-button .toolbarbutton-icon {
-	  display:block !important;
-	}
-	
-	toolbar[mode="text"]:not(#TabsToolbar) #PanelUI-menu-button .toolbarbutton-icon {
-	  -moz-appearance: unset !important;
-	  display:block !important;
-	  visibility: hidden !important;
-	  -moz-margin-end: -42px !important;
-	  background: unset !important;
-	  box-shadow: unset !important;
-	  border: unset !important;
-	}
 
-	#nav-bar[mode="text"] #PanelUI-menu-button .toolbarbutton-icon {
-	  -moz-appearance: unset !important;
-	  display:block !important;
-	  visibility: hidden !important;
-	  -moz-margin-end: -22px !important;
-	  background: unset !important;
-	  box-shadow: unset !important;
-	  border-style: unset !important;
-	  border: unset !important;
-	  height: unset !important;
-	  min-height: unset !important;
-	  max-height: 1px !important;
-	  padding: unset !important;
-	}
-
-	#nav-bar[mode="text"] #PanelUI-menu-button .toolbarbutton-text {
-	  -moz-margin-start: -14px !important;
-	}
-	
-	/* icons on tabs toolbar do no get hidden*/
-	#TabsToolbar[mode="text"] .toolbarbutton-text {
-	  display: none !important;
-	}
-
-	#TabsToolbar[mode="text"] .toolbarbutton-icon {
-	  display: block !important;
-	}
-	
-	/* support for old icons+text mode */
-	toolbar[mode="full"]:not(#web-developer-toolbar) .toolbarbutton-1:not([type="menu-button"]):not(#urlbar-reload-button):not(#urlbar-stop-button):not(#urlbar-go-button):not(.tabs-newtab-button):not(.tab-close-button):not(#back-button):not(#forward-button) {
-	  -moz-box-orient: vertical !important;
-	}
-
-	#TabsToolbar[mode="full"] toolbarbutton .toolbarbutton-text,
-	toolbar[mode="full"]:not(#web-developer-toolbar) #back-button .toolbarbutton-text,
-	toolbar[mode="full"]:not(#web-developer-toolbar) #forward-button .toolbarbutton-text{
-	  display: none !important;
-	}
-	
-	toolbar[mode="full"]:not(#web-developer-toolbar) toolbarbutton[type="menu"]:not(#bookmarks-menu-button) dropmarker{
-	  display: none !important;
-	}
-
-	toolbar[mode="full"]:not(#web-developer-toolbar) .toolbarbutton-1:not(#urlbar-reload-button):not(#urlbar-stop-button):not(#urlbar-go-button):not(.tabs-newtab-button):not(.tab-close-button):not(#back-button):not(#forward-button),
-	toolbar[mode="full"]:not(#web-developer-toolbar) .toolbarbutton-1:not(#urlbar-reload-button):not(#urlbar-stop-button):not(#urlbar-go-button):not(.tabs-newtab-button):not(.tab-close-button):not(#back-button):not(#forward-button) > .toolbarbutton-menubutton-button {
-	  min-width: 57px !important;
-	}
-
-	#navigator-toolbox #TabsToolbar[mode="full"] .toolbarbutton-1:not(#urlbar-reload-button):not(#urlbar-stop-button):not(#urlbar-go-button):not(.tabs-newtab-button):not(.tab-close-button):not(#back-button):not(#forward-button),
-	#navigator-toolbox #TabsToolbar[mode="full"] .toolbarbutton-1:not(#urlbar-reload-button):not(#urlbar-stop-button):not(#urlbar-go-button):not(.tabs-newtab-button):not(.tab-close-button):not(#back-button):not(#forward-button) > .toolbarbutton-menubutton-button,
-	toolbar[mode="full"] #urlbar .toolbarbutton-1:not(#urlbar-reload-button):not(#urlbar-stop-button):not(#urlbar-go-button):not(.tabs-newtab-button):not(.tab-close-button):not(#back-button):not(#forward-button),
-	toolbar[mode="full"] #urlbar .toolbarbutton-1:not(#urlbar-reload-button):not(#urlbar-stop-button):not(#urlbar-go-button):not(.tabs-newtab-button):not(.tab-close-button):not(#back-button):not(#forward-button) > .toolbarbutton-menubutton-button {
-	  min-width: unset !important;
-	}
-
-	toolbar[mode="full"] #urlbar #urlbar-reload-button .toolbarbutton-text,
-	toolbar[mode="full"] #urlbar #urlbar-stop-button .toolbarbutton-text,
-	toolbar[mode="full"] #urlbar #urlbar-go-button .toolbarbutton-text,
-	toolbar[mode="full"] .tabs-newtab-button .toolbarbutton-text {
-	  display: none !important;
-	}
-
-	toolbar[mode="full"] #urlbar-icons toolbarbutton label,
-	toolbar[mode="full"] #urlbar-icons toolbarbutton .toolbarbutton-text {
-	  display: none !important;
-	  visibility: collapse !important;
-	}
-	
-	#main-window:not([fx48plus="true"]) #nav-bar[mode="full"] #downloads-button image,
-	#main-window:not([fx48plus="true"]) #nav-bar[mode="full"] #downloads-button stack {
-	  margin-left: 22px !important;
-	  margin-right: 22px !important;
-	}
-	
 	/* Auto Form add-ons icon sizes*/
 	toolbarbutton[id^="af_button"] .toolbarbutton-icon {
 	  width: 18px !important;
@@ -752,8 +659,38 @@
 	  margin: unset !important;
 	}
 	
-	/* temp fix for Mozdevs menu button f-up */
-	/*#main-window[fx54plus="true"] :-moz-any(.toolbarbutton-1,#ctraddon_appbutton2):-moz-any([type="menu"],[type="menu-button"]) :-moz-any(dropmarker,.toolbarbutton-menu-dropmarker){
-	  background: none !important;
-	  border: none !important;
-	}*/
+	/* cui */
+	@media not all and (-moz-windows-classic) {
+		#ctraddon_cui-ctroldsearch,
+		#ctraddon_cui-tabsnontop,
+		#ctraddon_cui-smallnavbut-button2 {
+		  background:#fbfbfb;
+		}
+		#ctraddon_cui-smallnavbut-button1 {
+		  background:#dadada;
+		}
+		
+		#ctraddon_cui-icons-button {
+		  background:#dadada;
+		}
+		#ctraddon_cui-iconstext-button {
+		  background:#fbfbfb;
+		} 
+		#ctraddon_cui-textonly-button {
+		  background:#fbfbfb;
+		}
+	}
+	
+	@media all and (-moz-windows-classic) {
+	  #ctraddon_cui-iconstext-button *,
+	  #ctraddon_cui-textonly-button *,
+	  #ctraddon_cui-ctroldsearch *,
+	  #ctraddon_cui-tabsnontop *,
+	  #ctraddon_cui-smallnavbut-button2 * {
+		background:unset;
+	  }
+	  #ctraddon_cui-icons-button *,
+	  #ctraddon_cui-smallnavbut-button1 * {
+		background:#e7e3db;
+	  }
+	}
