--- a/xpi/content/css/panelmenucolor.css
+++ b/xpi/content/css/panelmenucolor.css
@@ -22,5 +22,43 @@
 		.toolbaritem-combined-buttons:-moz-any(:not([cui-areatype="toolbar"]), [overflowedItem=true]) > toolbarbutton:not(:-moz-any([disabled],[open],:active)):hover {
 		  background-color: #bbbbbb !important;
 		}
+		
+		#PanelUI-popup toolbaritem,
+		#downloadsPanel richlistitem,
+		#identity-popup-securityView-header {
+		  border-bottom-color: rgb(150, 150, 150) !important;
+		}
+		#PanelUI-popup toolbaritem:hover {
+		  border-color: rgb(150, 150, 150) !important;
+		}
+		#PanelUI-popup toolbaritem separator {
+		  background-color: rgb(150, 150, 150) !important;
+		}
+		#PanelUI-popup #PanelUI-footer,
+		#identity-popup-securityView button,
+		#identity-popup-security-expander:hover {
+		  background-color: rgb(200, 200, 200) !important;
+		}
+		#PanelUI-popup #PanelUI-footer toolbarseparator,
+		#downloadsPanel toolbarseparator,
+		#identity-popup-security-expander .box-inherit.button-box {
+		  border-left-color: rgb(150, 150, 150) !important;
+		}
+		#PanelUI-popup #PanelUI-footer-inner,
+		#PanelUI-popup #PanelUI-footer-fxa,
+		#downloadsPanel #downloadsFooter,
+		#tracking-protection-container,
+		#identity-popup .identity-popup-section {
+		  border-top-color: rgb(150, 150, 150) !important;
+		}
+		#PanelUI-popup #PanelUI-footer-fxa:hover,
+		#downloadsPanel #downloadsHistory:hover,
+		#downloadsPanel richlistitem:hover,
+		#identity-popup-securityView button:hover {
+		  background-color: rgb(175, 175, 175) !important;
+		}
+		#PanelUI-popup .toolbarbutton-multiline-text {
+		  padding: 1px !important;
+		}
 	}
 }
