--- a/xpi/content/css/verifiedcolors.css
+++ b/xpi/content/css/verifiedcolors.css
@@ -103,7 +103,7 @@
 	}
 	
 	@media (-moz-os-version: windows-win10) {
-		.urlbar-textbox-container {
+		#main-window:not([developertheme="true"]) .urlbar-textbox-container {
 		  margin-top: -1px !important;
 		  margin-bottom: -1px !important;
 		}
