--- a/xpi/content/css/appbutton2.css
+++ b/xpi/content/css/appbutton2.css
@@ -289,10 +289,12 @@
 	#main-window[sizemode="maximized"][developertheme="true"] #browser-panel {
 	  background: unset !important;
 	}
-
+	
+	#main-window[sizemode="maximized"][developertheme="true"][lwthemetextcolor="bright"]:not([tabsontop="false"]),
 	#main-window[sizemode="maximized"][developertheme="true"][devtoolstheme="dark"]:not([tabsontop="false"]){
 	  background: #1c2126 !important;
 	}
+	#main-window[sizemode="maximized"][developertheme="true"][lwthemetextcolor="dark"]:not([tabsontop="false"]),
 	#main-window[sizemode="maximized"][developertheme="true"][devtoolstheme="light"]:not([tabsontop="false"]) {
 	  background: #e3e4e6 !important;
 	}
@@ -304,26 +306,15 @@
 		  background: unset !important;
 		}
 
+		#main-window[sizemode="normal"][developertheme="true"][lwthemetextcolor="bright"]:not([tabsontop="false"]),
 		#main-window[sizemode="normal"][developertheme="true"][devtoolstheme="dark"]:not([tabsontop="false"]){
 		  background: #1c2126 !important;
 		}
+		#main-window[sizemode="normal"][developertheme="true"][lwthemetextcolor="dark"]:not([tabsontop="false"]),
 		#main-window[sizemode="normal"][developertheme="true"][devtoolstheme="light"]:not([tabsontop="false"]) {
 		  background: #e3e4e6 !important;
 		}
 		
-		#main-window[sizemode="normal"][developertheme="true"] #titlebar {
-		  margin-bottom: -50px !important;
-		}
-		
-		@media (-moz-windows-theme:aero) {
-		  #main-window[developertheme="true"]:not([customizing]) .titlebar-button,
-		  #main-window[developertheme="true"]:not([customizing]) .titlebar-button:not(#titlebar-close) > .toolbarbutton-icon{
-			opacity: 0.01 !important;
-		  }
-		  #main-window[developertheme="true"]:not([customizing]) .titlebar-button:hover {
-			opacity: 1 !important;
-		  }
-		}
 	}
 
 }
