--- a/xpi/content/css/tabs_curved.css
+++ b/xpi/content/css/tabs_curved.css
@@ -37,6 +37,11 @@
 	#main-window[fx51plus="true"] .tabbrowser-tab::before {
 	  opacity: 0 !important;
 	}
+	
+	#main-window[fx53plus="true"] .tab-label-container {
+	  margin-left: -3px !important;
+	  margin-right: -3px !important;
+	}
 
 	#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
 	.tabbrowser-tab:not([selected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
